localization_workspace/log/build_2026-01-28_20-46-23/wr_fusion/stdout_stderr.log
running egg_info
writing ../../build/wr_fusion/wr_fusion.egg-info/PKG-INFO
writing dependency_links to ../../build/wr_fusion/wr_fusion.egg-info/dependency_links.txt
writing entry points to ../../build/wr_fusion/wr_fusion.egg-info/entry_points.txt
writing requirements to ../../build/wr_fusion/wr_fusion.egg-info/requires.txt
writing top-level names to ../../build/wr_fusion/wr_fusion.egg-info/top_level.txt
reading manifest file '../../build/wr_fusion/wr_fusion.egg-info/SOURCES.txt'
writing manifest file '../../build/wr_fusion/wr_fusion.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/wiscrobo/workspace/WRoverSoftware_25-26/localization_workspace/install/wr_fusion/lib/python3.10/site-packages/wr_fusion/fusion.py to fusion.cpython-310.pyc
running install_data
running install_egg_info
  File "/home/wiscrobo/workspace/WRoverSoftware_25-26/localization_workspace/install/wr_fusion/lib/python3.10/site-packages/wr_fusion/fusion.py", line 278
    		)
    		^
SyntaxError: unmatched ')'

removing '/home/wiscrobo/workspace/WRoverSoftware_25-26/localization_workspace/install/wr_fusion/lib/python3.10/site-packages/wr_fusion-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/wr_fusion/wr_fusion.egg-info to /home/wiscrobo/workspace/WRoverSoftware_25-26/localization_workspace/install/wr_fusion/lib/python3.10/site-packages/wr_fusion-0.0.0-py3.10.egg-info
running install_scripts
Installing fusion script to /home/wiscrobo/workspace/WRoverSoftware_25-26/localization_workspace/install/wr_fusion/lib/wr_fusion
writing list of installed files to '/home/wiscrobo/workspace/WRoverSoftware_25-26/localization_workspace/build/wr_fusion/install.log'
